src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/*body.modal-open {*/
/*  overflow: hidden;*/
/*}*/

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  border: none;
  -webkit-text-fill-color: #f9f9f9 !important;
  -webkit-box-shadow: 0 0 0 30px #262626 inset !important;
  box-shadow: 0 0 0 30px #262626 inset !important;
}

/* @layer components {
  .transition-default {
    @apply transition-all duration-300 ease-in-out;
  }
} */

@layer components {
  .active-nav-link::after {
    content: "";
    @apply absolute 
      bottom-[-4px] 
      left-[-2px] 
      right-[-2px]
      h-[3px] 
      bg-accent-blue 
      rounded-lg;
  }
}

